ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-avalanches
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "120"
    alb.ingress.kubernetes.io/target-group-attributes: slow_start.duration_seconds=120
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "10"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/healthcheck-path: /health
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /pedido/
            pathType: Prefix
            backend:
              service:
                name: pedido-service
                port:
                  number: 8081
          - path: /pagamento-ms/
            pathType: Prefix
            backend:
              service:
                name: pagamento-service
                port:
                  number: 8082
          - path: /producao/
            pathType: Prefix
            backend:
              service:
                name: producao-service
                port:
                  number: 8083
          - path: /pagamento
            pathType: Prefix
            backend:
              service:
                name: sistema-pagamento-ms
                port:
                  number: 5001
